# nanobl-rs

./: Cargo.toml  GNUmakefile  README.md  amd64-oxide-none.json  bl.gld  build.rs  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
src/: cmd.rs  console.rs  delay.rs  dw_apb_uart.rs  gpio.rs  huashan.rs  huashan_hal.rs  idt.rs  lib.rs  main.rs  mem_regions.rs  nomutex.rs  pagetable.rs  pagetable_impl.rs  panic.rs  region_builder.rs  start.s  tedium64.rs  to_inclusive.rs
src/cmd/: call.rs  dump.rs  halt.rs  inflate.rs  load.rs  map.rs  msr.rs  panic.rs  port.rs  recv.rs
src/dw_apb_uart/: regdefs.rs
src/gpio/: regdefs.rs
src/tedium64/: paddr.rs  vaddr.rs
tools/: README.md  hbstool  ipmi
